exports[`test allowToChangeInstallationDirectory 1`] = `
Array [
  "Test Custom Installation Dir Setup 1.1.0.exe",
]
`;

exports[`test allowToChangeInstallationDirectory 2`] = `
Array [
  "test-custom-inst-dir-Setup-1.1.0.exe",
]
`;

exports[`test allowToChangeInstallationDirectory 3`] = `
Object {
  "owner": "foo",
  "provider": "github",
  "repo": "bar",
}
`;

exports[`test allowToChangeInstallationDirectory 4`] = `
Object {
  "githubArtifactName": "test-custom-inst-dir-Setup-1.1.0.exe",
  "path": "Test Custom Installation Dir Setup 1.1.0.exe",
  "version": "1.1.0",
}
`;

exports[`test custom include 1`] = `
Array [
  "Test App ßW Setup 1.1.0.exe",
]
`;

exports[`test custom include 2`] = `
Array [
  "TestApp-Setup-1.1.0.exe",
]
`;

exports[`test custom script 1`] = `
Array [
  "Test App ßW Setup 1.1.0.exe",
]
`;

exports[`test custom script 2`] = `
Array [
  "TestApp-Setup-1.1.0.exe",
]
`;

exports[`test menuCategory 1`] = `
Array [
  "Test Menu Category CustomName 1.1.0.exe",
]
`;

exports[`test menuCategory 2`] = `
Array [
  "test-menu-category-Setup-1.1.0.exe",
]
`;

exports[`test one-click 1`] = `
Array [
  "Test App ßW Setup 1.1.0.exe",
]
`;

exports[`test one-click 2`] = `
Array [
  "TestApp-Setup-1.1.0.exe",
]
`;

exports[`test one-click 3`] = `
Object {
  "owner": "actperepo",
  "package": "TestApp",
  "provider": "bintray",
}
`;

exports[`test perMachine, no run after finish 1`] = `
Array [
  "TestApp Setup 1.1.0.exe",
  "latest.yml",
]
`;

exports[`test perMachine, no run after finish 2`] = `
Array [
  "TestApp-Setup-1.1.0.exe",
]
`;

exports[`test perMachine, no run after finish 3`] = `
Object {
  "provider": "generic",
  "url": "https://develar.s3.amazonaws.com/test/win/x64",
}
`;

exports[`test perMachine, no run after finish 4`] = `
Object {
  "githubArtifactName": "TestApp-Setup-1.1.0.exe",
  "path": "TestApp Setup 1.1.0.exe",
  "version": "1.1.0",
}
`;

exports[`test web installer 1`] = `
Array [
  "Test App ßW Web Setup 1.1.0.exe",
  "TestApp-1.1.0-x64.nsis.7z",
]
`;

exports[`test web installer 2`] = `
Array [
  "TestApp-Web-Setup-1.1.0.exe",
]
`;
